some more style

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
              <div class="social-icons">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <i class="fa fa-github"></i>
                 </div> 
             </div>
         <form onsubmit="sendFormInfo()">
@@ -72,9 +71,12 @@
         </form>
         
             <div class="info-contact-section">
+                <div class="mail-section">
+                    <i class="fa fa-envelope"></i>
                 <a href="mailto:anton@thunberg.nu">Mail us!</a>
+                </div>
                 <div class="adress-section">
-                    <strong><p>Adress</p></strong>
+                    <h3>Adress</h3>
                     <p>Puserviksgatan 3</p>
                     <p>216 32</p>
                     <p>Gothenburg</p>
