--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 </div>
                 <div class="adress-section">
                     <h3>Adress</h3>
-                    <p>Puserviksgatan 3</p>
-                    <p>216 32</p>
-                    <p>Gothenburg</p>
+                    <p>Random gata</p>
+                    <p>5 nummer</p>
+                    <p>En stad</p>
                 </div>
             </div>
 
