--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
       <header id="header">
         <a href="./index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
-        <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
+        <a href="./index.html" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
         <nav class="Links">
-            <a>Hem</a>
+            <a href="./index.html">Hem</a>
             <a>Tjänster</a>
             <a href="./pages/about.html">Om oss</a>
         </nav>
