maybe last commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         
-        <title>Företagets namn</title>
+        <title>FEMLAB FARM</title>
         <meta name="description" content="Vår företags hemsida">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css">
@@ -15,9 +15,9 @@
         <a href="./index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
         <a href="./index.html" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
         <nav class="Links">
-            <a href="./index.html">Hem</a>
-            <a>Tjänster</a>
-            <a href="./pages/about.html">Om oss</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/service.html">Services</a>
+            <a href="./pages/about.html">About us</a>
         </nav>
       </header>
 
@@ -25,9 +25,9 @@
         <video alt="water" src="./media/video/water.mp4" autoplay muted loop></video>
         
         <div class="text-over-video">
-            <h1 id="scroll-to">Hejsan</h1>
+            <h1 id="scroll-to">Welcome!</h1>
                 <div class="main-btn">
-                <a href="#about-box-section">Se what we have</a>
+                <a href="./pages/service.html">Se what we can help you with</a>
                 </div>
 
         </div>
