--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         
-        <title>Om oss</title>
+        <title>About us</title>
         <meta name="description" content="Vår företags hemsida">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/style.css">
@@ -14,14 +14,14 @@
             <a href="../index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
             <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
             <nav class="Links">
-                <a href="../index.html">Hem</a>
-                <a>Tjänster</a>
-                <a href="./about.html">Om oss</a>
+                <a href="../index.html">Home</a>
+                <a href="./service.html">Services</a>
+                <a href="./about.html">About us</a>
             </nav>
           </header>
 
           <section class="about-rubrik">
-            <h1>Lite kort om oss</h1>
+            <h1>Short about us</h1>
           </section>
 
           <section class="about-info-box-section">
