Fixed padding and spelling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
     <body>
       <header id="header">
-        <a href="./index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
-        <a href="./index.html" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
+        <a href="../index.html" class="logo-max"><h1><span>F</span>EM <span>L</span>ab</h1></a>
+            <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>L</span></h1></a>
         <nav class="Links">
             <a href="./index.html">Home</a>
             <a href="./pages/service.html">Services</a>
@@ -35,7 +35,7 @@
 
       
       <section  id="about-box-section">
-        <article class="box-card-info">
+        <article class="box-card-info" >
             <div class="box-wrap">
                 <i class="fa fa-archive"></i>
                 <h2>What we have done before</h2>
