--- a/pages/about.html
+++ b/pages/about.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <header id="header">
-            <a href="../index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
-            <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
+            <a href="../index.html" class="logo-max"><h1><span>F</span>EM <span>L</span>ab</h1></a>
+            <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>L</span></h1></a>
             <nav class="Links">
                 <a href="../index.html">Home</a>
                 <a href="./service.html">Services</a>
@@ -58,7 +58,7 @@
       
           <footer id="form-section">
             <div id="contact-wrapper">
-              <h2 class="h-class"><span>S</span>hare <span>S</span>uff<span>!</span></h2>
+              <h2 class="h-class"><span>S</span>hare <span>S</span>tuff<span>!</span></h2>
                <div class="social-icons">
                   <i class="fa fa-twitter" aria-hidden="true"></i>
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
