--- a/pages/service.html
+++ b/pages/service.html
@@ -12,8 +12,8 @@
     </head>
     <body>
       <header id="header">
-        <a href="./index.html" class="logo-max"><h1><span>F</span>öretags<span>N</span>amn</h1></a>
-        <a href="./index.html" class="logo-mobil"><h1><span>F</span><span>N</span></h1></a>
+        <a href="../index.html" class="logo-max"><h1><span>F</span>EM <span>L</span>ab</h1></a>
+            <a href="#scroll-to" class="logo-mobil"><h1><span>F</span><span>L</span></h1></a>
         <nav class="Links">
             <a href="../index.html">Home</a>
             <a href="./service.html">Services</a>
